<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.linhphan.presentation.feature.popup.textSizePopup.TextSizePopupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:orientation="vertical"
        android:focusable="true"
        android:contentDescription="@string/lp_talkback_text_size_popup">

        <TextView
            android:id="@+id/tvTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@{String.format(@string/lp_label_percent_holder, viewModel.textScaleObservable)}"
            android:contentDescription="@{String.format(@string/lp_talkback_current_text_size, viewModel.textScaleObservable)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12"/>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:progress="@{viewModel.textScaleProgressObservable}"
            android:secondaryProgress="150"
            android:max="150"
            android:onProgressChanged="@{(v, p, f) -> viewModel.onProgressChanged(v, p, f)}"
            app:layout_constraintTop_toBottomOf="@id/tvTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:progress="100"
            />

        <TextView
            android:id="@+id/tvSampleText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:textSize="@{viewModel.textSizeObservable}"
            android:text="@string/lp_sample_text"
            app:layout_constraintTop_toBottomOf="@id/seek_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_apply"/>
        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lp_label_apply"
            android:enabled="@{viewModel.applyTextScaleButtonState}"
            android:onClick="@{()-> viewModel.onApplyNewTextScale()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>